test/tests/operators/to_google_secops/udm_reject_log_args.txt
error: `log_type` is only valid when `mode="raw_log"`
 --> tests/operators/to_google_secops/udm_reject_log_args.tql:7:33
  |
7 |   instance="INSTANCE", log_type="CUSTOM_DNS", forwarder="test-forwarder",
  |                                 ^^^^^^^^^^^^ 
  |

error: `forwarder` is only valid when `mode="raw_log"`
 --> tests/operators/to_google_secops/udm_reject_log_args.tql:7:57
  |
7 |   instance="INSTANCE", log_type="CUSTOM_DNS", forwarder="test-forwarder",
  |                                                         ^^^^^^^^^^^^^^^^ 
  |

error: `hint` is only valid when `mode="raw_log"`
 --> tests/operators/to_google_secops/udm_reject_log_args.tql:8:8
  |
8 |   hint="test-hint", source_filename="test-source.log"
  |        ^^^^^^^^^^^ 
  |

error: `source_filename` is only valid when `mode="raw_log"`
 --> tests/operators/to_google_secops/udm_reject_log_args.tql:8:37
  |
8 |   hint="test-hint", source_filename="test-source.log"
  |                                     ^^^^^^^^^^^^^^^^^ 
  |
